--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -10493,10 +10493,11 @@ table.caption {
   font-weight: 400 !important;
 }
 
-.info-box:hover {
+.info-box:hover, .info-box-lower:hover {
   color: #00447c;
   border: 1px solid #00447c;
   background-color: #ecf0f1;
+  border-bottom: 1px solid #00447c !important;
 }
 
 .info-box-lower {
@@ -10573,6 +10574,8 @@ table.caption {
   background-position: center top;
   background: no-repeat center center;
   margin-bottom: 1em;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .admissions-promo img.img-responsive {
@@ -10584,7 +10587,7 @@ table.caption {
   color: #fff;
   right: 0;
   bottom: 0;
-  position: static;
+  position: static !important;
   background: #000;
   margin: 0;
   font-size: 16.1px;
@@ -10592,21 +10595,20 @@ table.caption {
   padding: 2%;
   background: rgba(0, 0, 0, 0.5);
   position: absolute;
-  width: 40%;
+  width: 100%;
+  bottom: auto !important;
 }
 
 .action-btns {
   display: table;
   font-weight: 400 !important;
+  margin-bottom: 5px;
+  height: 100%;
+  border-radius: 12px;
 }
 
 .action-btns-container {
   height: 6.25em;
-}
-
-.action-btns {
-  height: 100%;
-  border-radius: 12px;
 }
 
 .action-btns-text {
@@ -10662,6 +10664,7 @@ table.caption {
 @media screen and (min-width: 992px) {
   .action-btns {
     font-size: 1.75em;
+    margin-bottom: 0px;
   }
 
   .info-box {
@@ -10670,6 +10673,16 @@ table.caption {
 
   .info-box-lower {
     font-size: 1.5em;
+  }
+
+  .hero-caption {
+    width: 40%;
+    float: right;
+    position: absolute !important;
+    top: inherit;
+    right: 0;
+    left: auto;
+    bottom: 0 !important;
   }
 }
 .presidentmessagecontainer {
